Fix task overflow ui

--- a/grocerylist/src/styles/Content.css
+++ b/grocerylist/src/styles/Content.css
@@ -20,4 +20,5 @@
 
 .tasks {
     flex-grow: 1;
+    overflow: auto;
 }
